@@ -45,6 +45,9 @@ Version 6.4.17
   - Bugfix: "Conditional jump or move depends on uninitialised value" in
     MkTime behoben.
   - Bugfix: Race Condition in CAssocArray::Copy behoben
+  - CMutex wirft jetzt eine Exception im Konstruktor, wenn kein Speicher für die
+    internen Variablen allokiert werden konnte. Daher konnten in den Member-
+    Functions einige Prüfungen wegoptimiert werden.
 
 Version 6.4.16 vom 19.05.2013	(SVN-Tag: REL_6_4_16)
   - Bugfix: Fehlende "IFDEF"'s zur Prüfung der Syslog-Unterstützung in CLog
